# PasskeyChanger

./: !cmake.bat  !cmake.sh  CMakeLists.txt  history.txt  index.html  resource.qrc  resource.rc  translation.sh
install/: install.nsi
share/translations/: passkeychanger_ru.qm  passkeychanger_ru.ts
src/: abstractpasskeychanger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qbittorrentpasskeychanger.cpp  qbittorrentpasskeychanger.h  torrentdirpasskeychanger.cpp  torrentdirpasskeychanger.h  torrentfilepasskeychanger.cpp  torrentfilepasskeychanger.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h
